--- a/android01/hw2/app/src/main/res/values/strings.xml
+++ b/android01/hw2/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="text_button8">8</string>
     <string name="text_button9">9</string>
     <string name="hint_editTextScoreBoard">0</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
