--- a/android01/hw2/app/src/main/res/values/strings.xml
+++ b/android01/hw2/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="text_Button_Settings">Настройки</string>
 </resources>
