--- a/android01/hw2/app/src/main/res/values/strings.xml
+++ b/android01/hw2/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     -->
     <string name="hello_world">Hello Square World!</string>
     <string name="text_Button_Settings">Настройки</string>
+    <string name="text_textView_Settings">Выбор Темы</string>
+    <string name="text_rbutton_Light_Theme">Светлая тема</string>
+    <string name="text_rbutton_Dark_Theme">Ночная тема</string>
 </resources>
